--- a/QuoteGenerator/style.css
+++ b/QuoteGenerator/style.css
@@ -1,3 +1,7 @@
+html {
+    opacity: 0.95;
+}
+
 body {
     color: white;
     background-image: url('https://images.pexels.com/photos/1907785/pexels-photo-1907785.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
